@@ -430,12 +430,6 @@ content: |
            the :binary:`~bin.mongo` shell) to ``localhost:27000`` to
            connect to the deployment running on
            ``hostname-a.com``.
-
-        .. note::
-
-           You cannot connect to a :term:`replica set` via an SSH
-           tunnel. |compass-short| cannot establish a connection
-           to multiple servers across the same SSH tunnel.
 ---
 title: Connect.
 level: 4
