@@ -42,7 +42,8 @@ Bug Fixes:
 
 - BSON Transpilers: Account for bson Decimal128 validation changes.
 
-- Make SSH tunnel use Socks5.
+- Make SSH tunnel use Socks5. You can now connect to replica sets and 
+  sharded clusters using an SSH tunnel.
 
 - Compass Logging: Bump mongodb-log-writer to allow browser envs.
 
